.provarCaches/00D5f000005vwGkEAI/objects/rstk__soprodconfpre__c.object
<CustomObject>
    <description>soprodconfpre__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__soprodconfpre_soprod__r.rstk__externalid__c + &apos;_&apos; +  rstk__soprodconfpre_selid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>LEFT(rstk__soprodconfpre_soprod__r.Name, 67) + &apos; - &apos; + rstk__soprodconfpre_selid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soprodconfpre_confgroup__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Configuration Group</label>
        <referenceTo>rstk__confgroup__c</referenceTo>
        <relationshipLabel>Product Configuration Pre-Selections</relationshipLabel>
        <relationshipName>soprodconfpres</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soprodconfpre_confsel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configuration Selection</label>
        <referenceTo>rstk__confsel__c</referenceTo>
        <relationshipLabel>Product Configuration Pre-Selections</relationshipLabel>
        <relationshipName>soprodconfpres</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soprodconfpre_selid__c</fullName>
        <label>Text Selection Identifier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soprodconfpre_soprod__c</fullName>
        <label>Product Master</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Product Configuration Pre-Selections</relationshipLabel>
        <relationshipName>soprodconfpres</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Product Configuration Pre-Selection</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Configuration Pre-Selections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>